--- a/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/wizShareTable.xhtml
@@ -1,5 +1,9 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:composite="http://java.sun.com/jsf/composite">
 
 <composite:interface>
 	<composite:attribute name="bean" />
@@ -15,56 +19,78 @@
 	<p:panel header="Tabella di ripartizione">
 
 		<p:growl id="messages" />
-		<h:panelGrid columns="4" columnClasses="label, value, percents, errorMessage" styleClass="grid">
+		<h:panelGrid columns="4"
+			columnClasses="label, value, percents, errorMessage"
+			styleClass="grid">
 
-			<f:ajax id="tableValidation" listener="#{cc.attrs.bean.shareTable.updateGoodsAndServices}" render="@form">
+			<f:ajax id="tableValidation"
+				listener="#{cc.attrs.bean.shareTable.updateGoodsAndServices}"
+				render="@form">
 
 				<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
-				<h:inputText id="atheneumCapitalBalance" value="#{cc.attrs.bean.shareTable.atheneumCapitalBalance}" label="#{msgs.shareTableCapitalBalance}"
-					required="true" disabled="#{cc.attrs.editingDisable or cc.attrs.agreementTable}">
-					<f:ajax event="blur" execute="@this" render="atheneumCapitalBalanceError  percentAtheneumCapitalBalance" />
+				<h:inputText id="atheneumCapitalBalance"
+					value="#{cc.attrs.bean.shareTable.atheneumCapitalBalance}"
+					label="#{msgs.shareTableCapitalBalance}" required="true"
+					disabled="#{cc.attrs.editingDisable or cc.attrs.agreementTable}">
+					<f:ajax event="blur" execute="@this"
+						render="atheneumCapitalBalanceError  percentAtheneumCapitalBalance" />
 					<f:validateDoubleRange minimum="0" maximum="100" />
 
 
 				</h:inputText>
-				<h:outputText id="percentAtheneumCapitalBalance" value="#{cc.attrs.bean.percentAtheneumCapitalBalance}">
+				<h:outputText id="percentAtheneumCapitalBalance"
+					value="#{cc.attrs.bean.percentAtheneumCapitalBalance}">
 					<f:convertNumber type="currency" currencySymbol="€" />
 				</h:outputText>
 
-				<h:message id="atheneumCapitalBalanceError" for="atheneumCapitalBalance" />
+				<h:message id="atheneumCapitalBalanceError"
+					for="atheneumCapitalBalance" />
 
 				<h:outputText value="#{msgs.shareTableCommonBalance}:" />
-				<h:inputText id="atheneumCommonBalance" value="#{cc.attrs.bean.shareTable.atheneumCommonBalance}" label="#{msgs.shareTableCommonBalance}"
-					required="true" disabled="#{cc.attrs.editingDisable or cc.attrs.agreementTable}">
-					<f:ajax event="blur" execute="@this" render="atheneumCommonBalanceError percentAtheneumCommonBalance" />
+				<h:inputText id="atheneumCommonBalance"
+					value="#{cc.attrs.bean.shareTable.atheneumCommonBalance}"
+					label="#{msgs.shareTableCommonBalance}" required="true"
+					disabled="#{cc.attrs.editingDisable or cc.attrs.agreementTable}">
+					<f:ajax event="blur" execute="@this"
+						render="atheneumCommonBalanceError percentAtheneumCommonBalance" />
 					<f:validateDoubleRange minimum="0" maximum="100" />
 
 				</h:inputText>
-				<h:outputText id="percentAtheneumCommonBalance" value="#{cc.attrs.bean.percentAtheneumCommonBalance}">
+				<h:outputText id="percentAtheneumCommonBalance"
+					value="#{cc.attrs.bean.percentAtheneumCommonBalance}">
 					<f:convertNumber type="currency" currencySymbol="€" />
 				</h:outputText>
-				<h:message for="atheneumCommonBalance" id="atheneumCommonBalanceError" />
+				<h:message for="atheneumCommonBalance"
+					id="atheneumCommonBalanceError" />
 
 				<h:outputText value="#{msgs.shareTablePersonnel}:" />
-				<h:inputText id="personnel" value="#{cc.attrs.bean.shareTable.personnel}" label="#{msgs.shareTablePersonnel}" required="true"
-					disabled="#{cc.attrs.editingDisable}" >
-					<f:ajax event="blur" execute="@this" render="personnelError percentPersonnel personnelShares" />
+				<h:inputText id="personnel"
+					value="#{cc.attrs.bean.shareTable.personnel}"
+					label="#{msgs.shareTablePersonnel}" required="true"
+					disabled="#{cc.attrs.editingDisable}">
+					<f:ajax event="blur" execute="@this"
+						render="personnelError percentPersonnel personnelShares" />
 					<f:validateDoubleRange minimum="0" maximum="100" />
 
 				</h:inputText>
-				<h:outputText id="percentPersonnel" value="#{cc.attrs.bean.percentPersonnel}">
+				<h:outputText id="percentPersonnel"
+					value="#{cc.attrs.bean.percentPersonnel}">
 					<f:convertNumber type="currency" currencySymbol="€" />
 				</h:outputText>
 				<h:message for="personnel" id="personnelError" />
 
 				<h:outputText value="#{msgs.shareTableStructures}:" />
-				<h:inputText id="structures" value="#{cc.attrs.bean.shareTable.structures}" label="#{msgs.shareTableStructures}" required="true"
+				<h:inputText id="structures"
+					value="#{cc.attrs.bean.shareTable.structures}"
+					label="#{msgs.shareTableStructures}" required="true"
 					disabled="#{cc.attrs.editingDisable or cc.attrs.agreementTable}">
-					<f:ajax event="blur" execute="@this" render="structuresError percentStructures" />
+					<f:ajax event="blur" execute="@this"
+						render="structuresError percentStructures" />
 					<f:validateDoubleRange minimum="0" maximum="100" />
 
 				</h:inputText>
-				<h:outputText id="percentStructures" value="#{cc.attrs.bean.percentStructures}">
+				<h:outputText id="percentStructures"
+					value="#{cc.attrs.bean.percentStructures}">
 					<f:convertNumber type="currency" currencySymbol="€" />
 				</h:outputText>
 				<h:message for="structures" id="structuresError" />
@@ -73,96 +99,125 @@
 
 
 			<h:outputText value="#{msgs.shareTableGoods}:" />
-			<h:inputText id="goodsAndServices" value="#{cc.attrs.bean.shareTable.goodsAndServices}" label="#{msgs.shareTableGoods}" required="true"
-				disabled="true">
-				<f:ajax event="blur" execute="@this" render="goodsAndServicesError percentGoodsAndServices" />
+			<h:inputText id="goodsAndServices"
+				value="#{cc.attrs.bean.shareTable.goodsAndServices}"
+				label="#{msgs.shareTableGoods}" required="true" disabled="true">
+				<f:ajax event="blur" execute="@this"
+					render="goodsAndServicesError percentGoodsAndServices" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 			</h:inputText>
 
-			<h:outputText id="percentGoodsAndServices" value="#{cc.attrs.bean.percentGoodsAndServices}">
+			<h:outputText id="percentGoodsAndServices"
+				value="#{cc.attrs.bean.percentGoodsAndServices}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="goodsAndServices" id="goodsAndServicesError" />
 
 			<h:outputText value="#{msgs.shareTableTrip}:" />
-			<h:inputText id="businessTrip" value="#{cc.attrs.bean.shareTable.businessTrip}" label="#{msgs.shareTableTrip}" required="true"
+			<h:inputText id="businessTrip"
+				value="#{cc.attrs.bean.shareTable.businessTrip}"
+				label="#{msgs.shareTableTrip}" required="true"
 				disabled="#{cc.attrs.editingDisable}">
-				<f:ajax event="blur" execute="@this" render="businessTripError percentBusinessTrip" />
+				<f:ajax event="blur" execute="@this"
+					render="businessTripError percentBusinessTrip" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 
 			</h:inputText>
-			<h:outputText id="percentBusinessTrip" value="#{cc.attrs.bean.percentBusinessTrip}">
+			<h:outputText id="percentBusinessTrip"
+				value="#{cc.attrs.bean.percentBusinessTrip}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="businessTrip" id="businessTripError" />
 
 			<h:outputText value="#{msgs.shareTableConsMaterials}:" />
-			<h:inputText id="consumerMaterials" value="#{cc.attrs.bean.shareTable.consumerMaterials}" label="#{msgs.shareTableConsMaterials}" required="true"
+			<h:inputText id="consumerMaterials"
+				value="#{cc.attrs.bean.shareTable.consumerMaterials}"
+				label="#{msgs.shareTableConsMaterials}" required="true"
 				disabled="#{cc.attrs.editingDisable}">
-				<f:ajax event="blur" execute="@this" render="consumerMaterialsError percentConsumerMaterials" />
+				<f:ajax event="blur" execute="@this"
+					render="consumerMaterialsError percentConsumerMaterials" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 
 			</h:inputText>
-			<h:outputText id="percentConsumerMaterials" value="#{cc.attrs.bean.percentConsumerMaterials}">
+			<h:outputText id="percentConsumerMaterials"
+				value="#{cc.attrs.bean.percentConsumerMaterials}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="consumerMaterials" id="consumerMaterialsError" />
 
 			<h:outputText value="#{msgs.shareTableInvMaterials}:" />
-			<h:inputText id="inventoryMaterials" value="#{cc.attrs.bean.shareTable.inventoryMaterials}" label="#{msgs.shareTableInvMaterials}" required="true"
+			<h:inputText id="inventoryMaterials"
+				value="#{cc.attrs.bean.shareTable.inventoryMaterials}"
+				label="#{msgs.shareTableInvMaterials}" required="true"
 				disabled="#{cc.attrs.editingDisable}">
-				<f:ajax event="blur" execute="@this" render="inventoryMaterialsError percentInventoryMaterials" />
+				<f:ajax event="blur" execute="@this"
+					render="inventoryMaterialsError percentInventoryMaterials" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 
 			</h:inputText>
-			<h:outputText id="percentInventoryMaterials" value="#{cc.attrs.bean.percentInventoryMaterials}">
+			<h:outputText id="percentInventoryMaterials"
+				value="#{cc.attrs.bean.percentInventoryMaterials}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="inventoryMaterials" id="inventoryMaterialsError" />
 
 			<h:outputText value="#{msgs.shareTableRentals}:" />
-			<h:inputText id="rentals" value="#{cc.attrs.bean.shareTable.rentals}" label="#{msgs.shareTableRentals}" required="true"
+			<h:inputText id="rentals" value="#{cc.attrs.bean.shareTable.rentals}"
+				label="#{msgs.shareTableRentals}" required="true"
 				disabled="#{cc.attrs.editingDisable}">
-				<f:ajax event="blur" execute="@this" render="rentalsError percentRentals" />
+				<f:ajax event="blur" execute="@this"
+					render="rentalsError percentRentals" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 
 			</h:inputText>
-			<h:outputText id="percentRentals" value="#{cc.attrs.bean.percentRentals}">
+			<h:outputText id="percentRentals"
+				value="#{cc.attrs.bean.percentRentals}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="rentals" id="rentalsError" />
 
 			<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
-			<h:inputText id="personnelOnContract" value="#{cc.attrs.bean.shareTable.personnelOnContract}" label="#{msgs.shareTableContrPersonnel}"
-				required="true" disabled="#{cc.attrs.editingDisable}">
-				<f:ajax event="blur" execute="@this" render="personnelOnContractError percentPersonnelOnContract" />
+			<h:inputText id="personnelOnContract"
+				value="#{cc.attrs.bean.shareTable.personnelOnContract}"
+				label="#{msgs.shareTableContrPersonnel}" required="true"
+				disabled="#{cc.attrs.editingDisable}">
+				<f:ajax event="blur" execute="@this"
+					render="personnelOnContractError percentPersonnelOnContract" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 
 			</h:inputText>
-			<h:outputText id="percentPersonnelOnContract" value="#{cc.attrs.bean.percentPersonnelOnContract}">
+			<h:outputText id="percentPersonnelOnContract"
+				value="#{cc.attrs.bean.percentPersonnelOnContract}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="personnelOnContract" id="personnelOnContractError" />
 
 			<h:outputText value="#{msgs.shareTableOtherCosts}:" />
-			<h:inputText id="otherCost" value="#{cc.attrs.bean.shareTable.otherCost}" label="#{msgs.shareTableOtherCosts}" required="true" disabled="true">
-				<f:ajax event="blur" execute="@this" render="otherCostError percentOtherCost" />
+			<h:inputText id="otherCost"
+				value="#{cc.attrs.bean.shareTable.otherCost}"
+				label="#{msgs.shareTableOtherCosts}" required="true" disabled="true">
+				<f:ajax event="blur" execute="@this"
+					render="otherCostError percentOtherCost" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 
 			</h:inputText>
-			<h:outputText id="percentOtherCost" value="#{cc.attrs.bean.percentOtherCost}">
+			<h:outputText id="percentOtherCost"
+				value="#{cc.attrs.bean.percentOtherCost}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message for="otherCost" id="otherCostError" />
 
-			<h:inputHidden value="needed" id="percentsCheck" validator="#{cc.attrs.bean.validate}" />
+			<h:inputHidden value="needed" id="percentsCheck"
+				validator="#{cc.attrs.bean.validate}" />
 			<h:message styleClass="errorMessage" for="percentsCheck" />
 
 		</h:panelGrid>
 	</p:panel>
 
-	<p:dataTable id="personnelShares" value="#{cc.attrs.bean.shares}" var="share" selectionMode="single" selection="#{cc.attrs.bean.selectedShare}"
-		rowKey="#{share}" emptyMessage="#{msgs.noShareFound}">
+	<p:dataTable id="personnelShares" value="#{cc.attrs.bean.shares}"
+		var="share" selectionMode="single"
+		selection="#{cc.attrs.bean.selectedShare}" rowKey="#{share}"
+		emptyMessage="#{msgs.noShareFound}">
 
 		<f:facet name="header">
 				#{msgs.shareTablePersonnel}
@@ -173,8 +228,10 @@
 					#{msgs.chief}
 				</f:facet>
 
-			<p:selectOneMenu id="chiefMenu" value="#{share.chiefScientist}" label="#{msgs.chief}" filter="true" filterMatchMode="contains"
-				disabled="#{cc.attrs.editingDisable}" onchange="#{cc.attrs.bean.notToUpdate()}">
+			<p:selectOneMenu id="chiefMenu" value="#{share.chiefScientist}"
+				label="#{msgs.chief}" filter="true" filterMatchMode="contains"
+				disabled="#{cc.attrs.editingDisable}"
+				onchange="#{cc.attrs.bean.notToUpdate()}">
 				<f:selectItem itemLabel="Selezionare" itemValue="#{null}" />
 				<f:selectItems value="#{utilPB.chiefItems}" />
 				<f:converter binding="#{chiefConverterPersonnelShare}" />
@@ -182,9 +239,13 @@
 			</p:selectOneMenu>
 
 			<f:facet name="footer">
-				<p:commandButton value="#{msgs.add}" action="#{cc.attrs.bean.addRow()}" update="personnelShares" process="personnelShares, @this"
+				<p:commandButton value="#{msgs.add}"
+					action="#{cc.attrs.bean.addRow()}" update="personnelShares"
+					process="personnelShares, @this"
 					rendered="#{!cc.attrs.editingDisable}" />
-				<p:commandButton value="#{msgs.remove}" action="#{cc.attrs.bean.removeRow()}" update="personnelShares" process="personnelShares, @this"
+				<p:commandButton value="#{msgs.remove}"
+					action="#{cc.attrs.bean.removeRow()}" update="personnelShares"
+					process="personnelShares, @this"
 					rendered="#{!cc.attrs.editingDisable}" />
 			</f:facet>
 		</p:column>
@@ -194,12 +255,15 @@
 					#{msgs.share}
 			</f:facet>
 
-			<h:inputText id="share" value="#{share.share}" label="#{msgs.share}" required="true">
-				<f:ajax event="blur" execute="@this" render="shareError percentPersonnelShare" />
+			<h:inputText id="share" value="#{share.share}" label="#{msgs.share}"
+				required="true">
+				<f:ajax event="blur" execute="@this"
+					render="shareError percentPersonnelShare" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 
 			</h:inputText>
-			<h:outputText id="percentPersonnelShare" value="#{cc.attrs.bean.computeRelativePercent(share.share, cc.attrs.bean.shareTable.personnel)}">
+			<h:outputText id="percentPersonnelShare"
+				value="#{cc.attrs.bean.computeRelativePercent(share.share, cc.attrs.bean.shareTable.personnel)}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 			<h:message styleClass="errorMessage" for="share" id="shareError" />
