agreemntShareTable attaccata a edit e view + eliminazione wizShareTable

--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -28,8 +28,7 @@
 				<ui:include src="/resources/sections/agreementWizData.xhtml" />
 
 				<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
-					<sections:wizShareTable editingDisable="true"
-						bean="#{agreementShareTablePCB}" />
+					<sections:agreementWizShareTable editingDisable="true" />
 				</p:tab>
 
 				<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
@@ -46,8 +45,7 @@
 
 
 	<p:commandButton value="back"
-			action="#{agreementEditPB.cancel()}"
-			actionListener="#{agreementShareTablePCB.toUpdate()}" ajax="false" />
+			action="#{agreementEditPB.cancel()}" ajax="false" />
 
 
 
