--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -28,8 +28,7 @@
 
 
 			<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
-				<sections:wizShareTable editingDisable="false" agreementTable="true"
-					bean="#{agreementShareTablePCB}" />
+				<sections:agreementWizShareTable editingDisable="false" />
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
