--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -28,8 +28,8 @@
 				<ui:include src="/resources/sections/agreementWizData.xhtml" />
 
 				<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
-					<sections:wizShareTable editingDisable="true"
-						bean="#{agreementShareTablePCB}" />
+					<sections:agreementWizShareTable editingDisable="true"
+						 />
 				</p:tab>
 
 				<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
